<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/custom_shape"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <TextView
            android:id="@+id/Q1text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Q1text"
            android:textSize="13sp" />


        <RadioGroup
            android:id="@+id/Q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/Q1A1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q1A1"
                android:checked="true" />

            <RadioButton
                android:id="@+id/Q1A2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q1A2"
                android:checked="true" />

            <RadioButton
                android:id="@+id/Q1A3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q1A3"
                android:checked="true" />

            <RadioButton
                android:id="@+id/Q1A4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q1A4"
                android:checked="true" />

        </RadioGroup>



        <TextView
            android:id="@+id/Q2text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Q2text"
            android:textSize="13sp" />

        <RadioGroup
            android:id="@+id/Q2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/Q2A1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q2A1"
                android:checked="true" />

            <RadioButton
                android:id="@+id/Q2A2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q2A2"
                android:checked="true" />

            <RadioButton
                android:id="@+id/Q2A3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q2A3"
                android:checked="true" />

            <RadioButton
                android:id="@+id/Q2A4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q2A4"
                android:checked="true" />

        </RadioGroup>



        <TextView
            android:id="@+id/Q3text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Q3text"
            android:textSize="13sp" />

        <RadioGroup
            android:id="@+id/Q3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/Q3A1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3A1"
                android:checked="true" />

            <RadioButton
                android:id="@+id/Q3A2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3A2"
                android:checked="true" />

            <RadioButton
                android:id="@+id/Q3A3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3A3"
                android:checked="true" />

            <RadioButton
                android:id="@+id/Q3A4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3A4"
                android:checked="true" />

        </RadioGroup>

        <Button
            android:id="@+id/buttonToMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonToMain" />



    </LinearLayout>

</RelativeLayout>
