<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#02000000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.skylan.homeworkpro.AssignmentInputActivity">

    <RelativeLayout
        android:id="@+id/display_assignments_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_background"
            android:text="@string/AItitle1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/input_question_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/blue_background"
            android:text="@string/question_mark"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />
    </RelativeLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <RelativeLayout
            android:id="@+id/display_assignments_subject_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="#10000000">

            <Spinner
                android:id="@+id/class_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="9dp"
                android:textSize="12sp" />
        </RelativeLayout>
    </RelativeLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <RelativeLayout
            android:id="@+id/display_assignments_type_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="#10000000">

            <Spinner
                android:id="@+id/homework_list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="9dp"
                android:textSize="12sp" />
        </RelativeLayout>
    </RelativeLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <RelativeLayout
            android:id="@+id/display_assignments_date_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#10000000">

            <Spinner
                android:id="@+id/date_dropdown"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="9dp"
                android:textSize="12sp" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AItitle2" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF">

            <EditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#10000000"
                android:ems="10"
                android:gravity="right"
                android:hint="@string/edit_title_hint"
                android:inputType="textCapWords"
                android:padding="9dp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AItitle3" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF">

            <EditText
                android:id="@+id/edit_grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4D00FF00"
                android:ems="10"
                android:gravity="right"
                android:hint="@string/edit_grade_hint"
                android:inputType="number"
                android:padding="9dp" />
        </RelativeLayout>
    </LinearLayout>

    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AItitle4" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF" >

            <EditText
                android:id="@+id/edit_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4D00FF00"
                android:ems="10"
                android:gravity="right"
                android:hint="@string/edit_days_hint"
                android:inputType="number"
                android:padding="9dp" />
        </RelativeLayout>
    </LinearLayout>
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AItitle6" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF">

            <EditText
                android:id="@+id/edit_difficulty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4D00FF00"
                android:ems="10"
                android:gravity="right"
                android:hint="@string/edit_difficulty_hint"
                android:inputType="number"
                android:maxLength="2"
                android:padding="9dp" />
        </RelativeLayout>
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewDone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/blue_background"
            android:gravity="center"
            android:text="@string/button_send"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp" />

        <TextView
            android:id="@+id/textViewSkip"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/blue_background"
            android:gravity="center"
            android:text="@string/button_skip_to_list"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>