<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_shape"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".IntroductionActivity">

    <TextView
        android:id="@+id/welcome_to_your"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome_to_your"
        android:textAppearance="?android:attr/textAppearanceLarge" />


    <TextView
        android:id="@+id/intro_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_to_your"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:text="@string/intro_title"
        android:textAlignment="4"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/beta_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intro_title"
        android:layout_centerHorizontal="true"
        android:text="@string/beta"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/beta_text">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#02000000"
            android:padding="6dp"
            android:layout_row="0"
            android:layout_column="0">

            <TextView
                android:id="@+id/button_input_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/ClickedBlue"
                android:padding="10dp"
                android:text="InputActivity"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#02000000"
            android:padding="6dp"
            android:layout_row="1"
            android:layout_column="0">

            <TextView
                android:id="@+id/button_old_display_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/ClickedBlue"
                android:padding="10dp"
                android:text="Old Display"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#02000000"
            android:padding="6dp"
            android:layout_row="2"
            android:layout_column="0">

            <TextView
                android:id="@+id/button_main_navigation_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/ClickedBlue"
                android:padding="10dp"
                android:text="Main Navigation Activity"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#02000000"
            android:padding="6dp"
            android:layout_row="3"
            android:layout_column="0">

            <TextView
                android:id="@+id/button_navigator_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/ClickedBlue"
                android:padding="10dp"
                android:text="Navigator Activity"
                android:textSize="20sp" />
        </LinearLayout>

    </GridLayout>

</RelativeLayout>